<resources>
    <string name="app_name">KeuanganKu</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_report">Report</string>
    <string name="menu_home">Home</string>
    <string name="press_to_exit">Press once again to exit</string>
    <string name="menu_setting">Setting</string>
    <string name="title">KeuanganKu</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="balance_title">Balance</string>
    <string name="add_account">+ Add Account</string>
    <string name="title_add_account">Add Account</string>
    <string name="icon_title">Icon</string>
    <string name="add_account_button">Add Account</string>
    <string name="add_account_name">Account Name</string>
    <string name="add_account_des">Description</string>
    <string name="add_account_currency">Currency</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_empty">Value Cannot Be Empty!</string>
    <string name="account_added">New Account Added!</string>
    <string name="maximum_account">Maximum Account Reached!</string>
    <string name="click_to_edit">Click To Edit</string>
    <string name="food_expense">Food Expense</string>
    <string name="transport_expense">Transport</string>
    <string name="common_expense">Common Expense</string>
    <string name="add_expense_title">Expense</string>
    <string name="add_date">Date</string>
    <string name="add_expense_amount">Amount</string>
    <string name="add_expense_des">Description</string>
    <string name="add_expense_des_text">Click To Add Description</string>
    <string name="add_expense_amount_text">0</string>
    <string name="save">Save</string>
    <string name="add_income_des_text">Click To Add Description</string>
    <string name="add_income_title">Income</string>
    <string name="add_income_des">Description</string>
    <string name="add_income_amount">Amount</string>
    <string name="data_income_is_not_valid">Data Income is not valid!</string>
    <string name="date_report">Date</string>
    <string name="des_report">Description</string>
    <string name="amount_report">Amount</string>
    <string name="report_is_empty">Report Is Empty</string>
    <string name="report_menu_title">Report Menu</string>
    <string name="list_report_title_menu">List Report</string>
    <string name="line_diagram_report_title_menu">Line Diagram</string>
    <string name="pie_diagram_report_title_menu">Pie Diagram</string>
    <string name="waterfall_diagram_report_title_menu">Waterfall Diagram</string>
    <string name="pie_chart_report_string"><![CDATA[Pie Chart Income & Expense]]></string>
    <string name="flow_piechart_legend_title">Type Transaction</string>
    <string name="textColorGreen" translatable="false">#4CAF50</string>
    <string name="textColorRed" translatable="false">#F44336</string>
    <string name="textColorGray" translatable="false">#616161</string>
    <string name="waterfall_chart_report_string"><![CDATA[WaterFall Chart Income & Expense]]></string>
    <string name="scale_million">Mil</string>
    <string name="money_in_currency">Total Money</string>
    <string name="line_chart_report"><![CDATA[Line Chart Income & Expense]]></string>
    <string name="delete_transaction_title">Delete Transaction</string>
    <string name="delete">Delete</string>
    <string name="delete_message">Are you sure want to delete this transaction</string>
    <string name="transaction_is_deleted">Transaction is succesfully deleted</string>
    <string name="expire_transaction_message">Expired Transaction Is Detected, Please delete if not use anymore</string>
    <string name="min_ballance_message">Your Balance is Minus</string>
    <string name="welcome_to_app">Welcome to KeuanganKu App</string>
    <string name="new_schedule_received">Time Schedule For notification is received</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="about_app">About App</string>
    <string name="setting_title">Setting</string>
    <string name="abount_message">lorem ipsum blablabla</string>
    <string name="foreground_notification_message">Keuanganku Service is running</string>
    <string name="about_title">About App</string>
</resources>
