<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete_transaction_title"
            android:textColor="@color/textColorWhite"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/des_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:padding="10dp"
        android:textSize="18sp"
        android:text="@string/delete_message"
        android:textColor="@color/textColorBlack" />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="right"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok_delete_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@color/textColorBlue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/cancel_delete_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/textColorLightGray"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>