<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryLight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:fontFamily="@string/medium_font"
            android:gravity="center"
            android:text="@string/title_add_account"
            android:textColor="@color/textColorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/text_editText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ok_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/textColorBlue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/cancel_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/textColorLightGray"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>